@@ -1,13 +1,15 @@
-#import <Renaissance/GSMarkupDocument.h>
+#import <AppKit/NSDocument.h>
 
 @class Archive, TableViewDataSource;
 
-@interface ZipperDocument : GSMarkupDocument
+@interface ZipperDocument : NSDocument
 {
   IBOutlet NSTableView *_tableView;
   	
   Archive *_archive;
   IBOutlet TableViewDataSource *_tableViewDataSource;
 }
+
+- (TableViewDataSource *)tableViewDataSource;
 
 @end
